kubernetes/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - port: 4200
      targetPort: 4200
      protocol: TCP
  type: NodePort
